--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "author": "Maslova Oksana",
   "dependencies": {
-    "newman": "^4.6.0"
+    "newman": "^4.6.0",
+    "newman-reporter-reportportal": "0.0.23"
   }
 }
